# contenthub

backend/: .env  pyproject.toml  sql_app.db
backend/backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
backend/backend/app/auth/: security.py
backend/backend/app/routes/: auth.py  categories.py  posts.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: HeroSection.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: About.tsx  Blogs.tsx  Contact.tsx  CreatePost.tsx  Home.tsx  Login.tsx  PostDetail.tsx  Profile.tsx  Signup.tsx  Videos.tsx
frontend/src/services/: api.ts
